@@ -1,12 +1,12 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/nss-3.12_rc3.ebuild,v 1.1 2008/05/11 14:30:23 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nss/nss-3.12_rc4.ebuild,v 1.1 2008/06/05 13:08:22 armin76 Exp $
 
 EAPI="prefix"
 
 inherit eutils flag-o-matic multilib toolchain-funcs
 
-NSPR_VER="4.7.1_beta3"
+NSPR_VER="4.7.1"
 RTM_NAME="NSS_${PV//./_}_RTM"
 DESCRIPTION="Mozilla's Network Security Services library that implements PKI support"
 HOMEPAGE="http://www.mozilla.org/projects/security/pki/nss/"
